--- a/.github/ISSUE_TEMPLATE/submit-an-idea.yml
+++ b/.github/ISSUE_TEMPLATE/submit-an-idea.yml
@@ -5,11 +5,12 @@ description: Tell us about a talk you'd like to see
 body:
 - type: markdown
   attributes:
-    value: >
+    value: |
       Thank you for your interest in the Ansible community meetups !
       We are looking forward to your proposal on a wide range of Ansible topics whether you are a user, a contributor or a developer.
 
       If you have any questions, please feel free to reach out to us via:
+
       * Matrix: [#community:ansible.com](https://matrix.to/#/#community:ansible.im)
       * Libera.chat (IRC):` #ansible-community` on [libera.chat](https://web.libera.chat/#libera)
 
