--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 ---
 site_name: Ansible Meetup Toolkit Documentation
 site_url: https://meetuptoolkit.readthedocs.io/
-repo_url: https://github.com/ansible/meetup
+repo_url: https://github.com/ansible-community/meetup
 edit_uri: blob/main/docs
 strict: true
 use_directory_urls: false
